--- a/css/main.css
+++ b/css/main.css
@@ -1169,7 +1169,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #1226ff;
+  background: #dbe29e;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
